[package]
name = "kb-url-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
futures = "0.3.28"
reqwest = "0.11.18"
scraper = "0.16.0"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.4"
url = { version = "2.4.0", features = ["serde"] }
